WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146072
iOS WebKit1: [LegacyTileLayer drawInContext:] should ensure it has web lock
https://bugs.webkit.org/show_bug.cgi?id=146072
Summary
iOS WebKit1: [LegacyTileLayer drawInContext:] should ensure it has web lock
Antti Koivisto
Reported
2015-06-17 12:02:08 PDT
There are some scenarios where we end up drawing without web lock due to client or system issues. Protect against crashes by taking the lock.
Attachments
patch
(2.36 KB, patch)
2015-06-17 12:09 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-06-17 12:02:44 PDT
rdar://problem/21149759
Antti Koivisto
Comment 2
2015-06-17 12:09:26 PDT
Created
attachment 255028
[details]
patch
Antti Koivisto
Comment 3
2015-06-17 12:52:53 PDT
https://trac.webkit.org/r185660
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug