iOS WebKit1: [LegacyTileLayer drawInContext:] should ensure it has web lock https://bugs.webkit.org/show_bug.cgi?id=146072 rdar://problem/21149759

Reviewed by Simon Fraser

There are some scenarios where we end up drawing without web lock due to client or system issues.
This can cause crashes.

* platform/ios/LegacyTileLayer.mm:
(-[LegacyTileLayer setNeedsDisplayInRect:]):
(-[LegacyTileLayer drawInContext:]):

    Ensure we have the web lock when called in main thread (even though we should have it already).



Canonical link: https://commits.webkit.org/164113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185660 268f45cc-cd09-0410-ab3c-d52691b4dbfc